@@ -4,7 +4,7 @@ Subtitle File Format Specification Licences
   All other files in this directory are bound by the same license as Gaupol
   except the following:
 
-    * ass.specs.rtf
+    * ass-specs.rtf
     * mdvddoc.html
     * mpl2-eng.html
 
