@@ -1,5 +1,12 @@
 2006-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* data/headers/microdvd.txt:
+	* lib/gaupol/base/file/microdvd.py:
+	* lib/gaupol/base/file/test/test_init.py:
+	  Added support for MicroDVD headers.
+
+2006-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* lib/gaupol/gtk/dialog/spellcheck.py:
 	  Don't let amount of replacements exceed conf.spell_check.max_repl.
 
